@@ -12,6 +12,9 @@ What's New in Python 2.4 alpha 3?
 Core and builtins
 -----------------
 
+- Fix the order of application of decorators.  The proper order is bottom-up;
+  the first decorator listed is the last one called.
+
 - SF patch #1005778.  Fix a seg fault if the list size changed while
   calling list.index().  This could happen if a rich comparison function
   modified the list.
